style card, text and background

--- a/index.html
+++ b/index.html
@@ -4,7 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SASS</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/index.css" />
   </head>
-  <body></body>
+  <br>
+    <div class="card">
+      <h1 class="card-title">Title</h1>
+      <p class="card-body">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit corporis,
+        quisquam labore quis ipsa iusto neque ab quod sunt quos quam tempore
+        molestiae eligendi quibusdam sit rem placeat aut molestias!
+      </p>
+      <button href="" class="button">click</button>
+    </div>
+
+    <span class="text-primary">blue text</span> |
+    <span class="text-secondary">grey text</span> |
+    <span class="text-success">green text</span> |
+    <span class="text-warning">yellow text</span> |
+    <span class="text-danger">red text</span> |
+    <span class="text-info">cyan text</span> |
+    <span class="text-light">white text</span> |
+    <span class="text-orange">orange text</span> |
+    <span class="text-pink">pink text</span> |
+    <span class="text-brown">brown text</span> |
+    <span class="text-black">black text</span> |
+    <span class="text-purple">purple text</span> |
+
+    <br></br>
+
+    <span class="bg-primary text-white">blue background</span> |
+    <span class="bg-secondary text-white">grey background</span> |
+    <span class="bg-success text-white">green background</span> |
+    <span class="bg-warning">yellow background</span> |
+    <span class="bg-danger text-white">red background</span> |
+    <span class="bg-info text-white">cyan background</span> |
+    <span class="bg-light">white background</span> |
+    <span class="bg-orange text-white">orange background</span> |
+    <span class="bg-pink text-white">pink background</span> |
+    <span class="bg-brown text-white">brown background</span> |
+    <span class="bg-black text-white">black background</span> |
+    <span class="bg-purple text-white">purple background</span> |
+  </body>
 </html>
