use mixin and import in scss

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>SASS</title>
     <link rel="stylesheet" href="/css/index.css" />
   </head>
-  <br>
+  <body>
     <div class="card">
       <h1 class="card-title">Title</h1>
       <p class="card-body">
@@ -14,7 +14,7 @@
         quisquam labore quis ipsa iusto neque ab quod sunt quos quam tempore
         molestiae eligendi quibusdam sit rem placeat aut molestias!
       </p>
-      <button href="" class="button">click</button>
+      <button href="#" class="button">click</button>
     </div>
 
     <span class="text-primary">blue text</span> |
@@ -28,9 +28,9 @@
     <span class="text-pink">pink text</span> |
     <span class="text-brown">brown text</span> |
     <span class="text-black">black text</span> |
-    <span class="text-purple">purple text</span> |
+    <span class="text-purple">purple text</span>
 
-    <br></br>
+    <br /><br />
 
     <span class="bg-primary text-white">blue background</span> |
     <span class="bg-secondary text-white">grey background</span> |
@@ -43,6 +43,34 @@
     <span class="bg-pink text-white">pink background</span> |
     <span class="bg-brown text-white">brown background</span> |
     <span class="bg-black text-white">black background</span> |
-    <span class="bg-purple text-white">purple background</span> |
+    <span class="bg-purple text-white">purple background</span>
+
+    <br /><br />
+
+    <span class="bg-primary-light-1 text-white">primary light 1</span> |
+    <span class="bg-primary-light-2 text-white">primary light 2</span> |
+    <span class="bg-primary-light-3 text-white">primary light 3</span> |
+    <span class="bg-primary-light-4 text-white">primary light 4</span> |
+    <span class="bg-primary-light-5 text-white">primary light 5</span> |
+    <span class="bg-primary-light-6 text-white">primary light 6</span> |
+    <span class="bg-primary-light-7 text-white">primary light 7</span> |
+    <span class="bg-primary-light-8">primary light 8</span> |
+    <span class="bg-primary-light-9">primary light 9</span>
+
+    <br /><br />
+
+    <a href="#" class="text-success text-hover-orange">Hover on me</a>
+    <br /><br />
+
+    <button class="btn">button</button>
+    <button class="btn-primary text-white">button</button>
+    <button class="btn-secondary text-white">button</button>
+    <button class="btn-success text-white">button</button>
+    <button class="btn-outlined-danger text-danger text-hover-white">
+      button
+    </button>
+    <button class="btn-outlined-purple text-purple text-hover-white">
+      button
+    </button>
   </body>
 </html>
